refactoring of phUploader.js service and it's tests.

--- a/statics/partials/librairy/librairy_uploader.html
+++ b/statics/partials/librairy/librairy_uploader.html
@@ -14,4 +14,10 @@
         <button id="id_files" ph-hidden-file-model="handleFiles" multiple>Add pictures</button>
     </div>
     </section>
+    <footer>
+        <div class="buttons-wrapper">
+            <button ng-click="close()">Cancel</button>
+            <button ng-click="submit()">Upload</button>
+        </div><!-- buttons wrapper -->
+    </footer>
 </div>
