--- a/statics/partials/weblog/weblog_list.html
+++ b/statics/partials/weblog/weblog_list.html
@@ -15,8 +15,8 @@
     </footer>
 </article>
 <nav id="pagination">
-    <a ng-if="prev" id="prev" ng-href="{{ prev }}">Recent posts »</a>
-    <a ng-if="next" id="next" ng-href="{{ next }}">« Older posts</a>
+    <a ng-if="prev_page" id="prev" href="" ng-click="goToPage(prev_page)">« Recent posts</a>
+    <a ng-if="next_page" id="next" href="" ng-click="goToPage(next_page)">Older posts »</a>
 </nav>
 </div>
 
