--- a/statics/partials/weblog/weblog_list.html
+++ b/statics/partials/weblog/weblog_list.html
@@ -7,11 +7,11 @@
     ng-repeat="post in posts">
     <header>
     <ng-include src="'/assets/partials/weblog/weblog_time.html'"></ng-include>
-    <h1><a href="/weblog/{{ post.slug }}/">{{ post.title }}</a></h1>
+    <h1><a href="" ng-click="goToPost(post.slug)">{{ post.title }}</a></h1>
     </header>
     <div class="content" ng-bind-html="post.abstract"></div>
     <footer>
-        <p><a href="/weblog/{{ post.slug }}/">Read post</a></p>
+        <p><a href="" ng-click="goToPost(post.slug)">Read post</a></p>
     </footer>
 </article>
 <nav id="pagination">
