--- a/statics/css/controller.less
+++ b/statics/css/controller.less
@@ -43,13 +43,7 @@
 @import '@{base-css}common/grid.less';
 
 // typography
-@import '@{base-css}common/typo.less';
-
-// weblog palette
-@import '@{base-css}weblog/palette.less';
-
-// librairy palette
-@import '@{base-css}librairy/palette.less';
+@import '@{base-css}common/droid-fonts.less';
 
 // mixins
 @import '@{base-css}common/mixins.less';
@@ -58,20 +52,35 @@
 @import '@{base-css}common/sprite.less';
 
 
-// forms
-@import '@{base-css}common/forms.less';
+/* Common */
+
+// common palette
+@import '@{base-css}common/palette.less';
 
 // common layout
 @import '@{base-css}common/layout.less';
 
+// common forms
+@import '@{base-css}common/forms.less';
+
+
+
+/* Librairy */
+
+// librairy palette
+@import '@{base-css}librairy/palette.less';
 
 // layout
 @import '@{base-css}librairy/layout.less';
 
 
+
+/*  Weblog */
+
+// weblog palette
+@import '@{base-css}weblog/palette.less';
+
 // layout
 @import '@{base-css}weblog/layout.less';
 
-// admin
-//@import '@{base-css}weblog/admin.less';
 
