--- a/statics/css/weblog/palette.less
+++ b/statics/css/weblog/palette.less
@@ -1,37 +1,14 @@
 // Color Palette
-
-@bg: #FFF;          // body background
-@text: #575757;        // body text
-@headings: #222;    // headings
-@time: #969696;     // date indications
-@desc:  @time;     // descriptions
-@links: @text;      // links
-@links-h: #000;     // links hover, active and focus
-@selected-links: #000;   //selected links (current url) 
-@hr: #CCC;          // hrules
-@tags: @time;       // tags list
-@code-bg: @text;      // code blocks background
-@code: @bg;         // code blocks color
-@code-border: #000; // code blocks border
-@degrade-start: #444444; // starting color for default degrade
-@degrade-end: #222222; // ending color for default degrade
-@degrade-bg: #222222; // background color for default degrade
-@default-arrow: #444444; // color of default arrows
-@admin-overlay-bg: #000; // administration overlay background color
-@admin-overlay-opacity: 0.6; // administration overlay opacity
-
-
-// forms
-@invalid-shadow: 0 0 3px #970000; // invalid form elements shadow
-@help-text: @text; // help text color
-@inputs-bg: @bg; // inputs (textarea, input etc.) background color
-@inputs-border: 1px solid #000; // inputs border
-@inputs-text-color: @text; // inputs text color
-@inputs-hover-focus-shadow: 0 0 3px #000; // inputs :hover and :focus shadow
-@submit-button-border: 1px solid #000; // submit and buttons border
-@submit-button-shadow: 0 0 1px #000; // submit and buttons shadow
-@submit-button: @text; // submit and buttons text color
-@submit-button-hover-focus: #000; // submit and buttons :hover and :focus text color
-@submit-button-hover-focus-shadow: 0 0 3px #000; // submit and buttons :hover and :focus shadow
-
-
+@blog-bg: #FFF; // body background
+@blog-text: #575757; // body text
+@blog-headings: #222; // headings
+@blog-time: #969696; // date indications
+@blog-desc: @blog-time; // article descriptions
+@blog-links: @blog-text; // links
+@blog-links-hover: #000; // links hover, active and focus
+@blog-selected-menu: #000; // selected links in main menu
+@blog-hr: #CCC; // hrules
+@blog-tags: @blog-time; // tags list
+@blog-code-bg: #FFF; // code blocks background
+@blog-code-text: @blog-text; // code blocks text color
+@blog-code-border: #000; // code blocks border
