--- a/statics/css/librairy/layout.less
+++ b/statics/css/librairy/layout.less
@@ -19,19 +19,33 @@ body#librairy {
     }
 
     header[role="banner"] {
-        border: none;
+        position: absolute;
+        width: 100%;
+        height: 70px;
+        text-align: right;
         // title image (up left)
         #logo {
             position: fixed;
+            top: 11px;
+            left: 20px;
         }
         // horizontal navigation menu
         #menu {
             position: fixed;
-            // selected links
-            a.selected {
-                color: @lib-selected-links;
-                &:hover, &:active, &:focus {
-                    color: @lib-links-hover;
+            width: 100%;
+            top: 40px;
+            right: 20px;
+            li {
+                border-right: 1px solid @lib-links;
+                &:last-child {
+                    border: none;
+                }
+                // selected links
+                a.selected {
+                    color: @lib-selected-links;
+                    &:hover, &:active, &:focus {
+                        color: @lib-links-hover;
+                    }
                 }
             }
         }
@@ -460,6 +474,24 @@ body#librairy {
                     color: #222;
                 }
             }
+        }
+    }
+
+    // default close button
+    button.close {
+        color: @lib-modal-close-cross;
+        &:hover, &:focus, &:active {
+            color: @lib-modal-close-cross-hover;
+        }
+    }
+
+    // modal window
+    section#modal {
+        background: @lib-modal-bg;
+        border: 1px solid @lib-modal-border;
+        box-shadow: 0 0 15px @lib-modal-border;
+        header {
+            border-bottom: 1px solid @lib-modal-inborder;
         }
     }
 } // body
