add a form to create new post.

--- a/statics/css/common/palette.less
+++ b/statics/css/common/palette.less
@@ -5,10 +5,10 @@
 @com-modal-overlay-bg: #000; // modal overlay background color
 @com-modal-overlay-opacity: 0.6; // modal overlay opacity
 @com-modal-bg: #FFF; // modal window background
-@com-modal-border: #222; // modal window border
-@com-modal-inborder: #222; // border inside modal window
-@com-modal-close-cross: #222;         // modal close button
-@com-modal-close-cross-hover: #000;   // modal close button hover
+@com-modal-border: #CCC; // modal window border
+@com-modal-inborder: #CCC; // border inside modal window
+@com-modal-close-cross: #CCC;         // modal close button
+@com-modal-close-cross-hover: #222;   // modal close button hover
 
 
 // forms
