add object level permissions for posts (only author can edit).

--- a/statics/css/weblog/layout.less
+++ b/statics/css/weblog/layout.less
@@ -202,8 +202,8 @@ body#weblog {
             padding-left: 10px;
             color: @blog-text;
             font-variant: small-caps;
-            &:visited, &:hover, &:active {
-                color: @blog-text;
+            &:hover, &:active {
+                color: @blog-links-hover;
             }
         }
     }
