--- a/statics/css/weblog/palette.less
+++ b/statics/css/weblog/palette.less
@@ -12,3 +12,5 @@
 @blog-code-bg: #FFF; // code blocks background
 @blog-code-text: @blog-text; // code blocks text color
 @blog-code-border: #000; // code blocks border
+
+@blog-input-border: #CCC;
