--- a/statics/css/weblog/palette.less
+++ b/statics/css/weblog/palette.less
@@ -14,3 +14,8 @@
 @blog-code-border: #000; // code blocks border
 
 @blog-input-border: #CCC;
+//@blog-tag-bg: .degrade(#797979, #969696, #797979);
+@blog-tag-bg: #414141;
+@blog-tag-border: #222;
+@blog-tag-color: #FFF;
+@blog-tag-color-hover: #000;
